--- a/app_festaNow/templates/festa_now/staff/home/edit_home.html
+++ b/app_festaNow/templates/festa_now/staff/home/edit_home.html
@@ -1,49 +1,145 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base_copyright_version.html' %}
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-
-<body>
-    <center>
-        <h1>글을 수정중입니다.</h1>
-        <form action="{% url 's_update_home' festa.id home.id %}" method="POST">
+<div id="new_staff_container">
+    <div id="subtitle_text_wrapper">
+        집가자(to. STAFF)
+    </div>
+    <div id="background_div">
+        <form name="cancle_or_save_form" method="POST">
             {% csrf_token %}
-            [Title] : <input type="text" name='title' value="{{home.title}}">
-            <br>
-            <br>
-            [Wirter] : <input type="text" name='writer' value="{{home.writer}}">
-            <br>
-            <br>
-
-            [Region] :
-            <select name="region">
-                <option name="서울">서울</option>
-                <option name="경기">경기</option>
-                <option name="강원">강원</option>
-                <option name="충북">충북</option>
-                <option name="충남">충남</option>
-                <option name="경북">경북</option>
-                <option name="경남">경남</option>
-                <option name="전북">전북</option>
-                <option name="전남">전남</option>
-                <option name="제주">제주</option>
-            </select>
-            <br>
-            <br>
-            [Body]
-            <br>
-            <textarea name="body" id="" cols="30" rows="10" placeholder="write your content"
-                style="padding:10px; margin:10px;">{{home.body}}</textarea>
-            <br>
-            <br>
-            <button type='submit'>게시글 수정</button>
+            <div>
+                <div id="festa_info">
+                    <div class="festa_content">
+                        <div>제목</div>
+                        <div id="selector_version">
+                            <div id="selector_div">
+                                    <select name="region" value="aa">
+                                            <option name="서울">서울</option>
+                                            <option name="경기">경기</option>
+                                            <option name="강원">강원</option>
+                                            <option name="충북">충북</option>
+                                            <option name="충남">충남</option>
+                                            <option name="경북">경북</option>
+                                            <option name="경남">경남</option>
+                                            <option name="전북">전북</option>
+                                            <option name="전남">전남</option>
+                                            <option name="제주">제주</option>
+                                        </select>
+                            </div>
+                            <div id="title_div">
+                                <input type="text" name='title' placeholder="제목을 입력해주세요" value="{{home.title}}"></div>
+                        </div>
+                    </div>
+                    <div class="festa_content festa_content_second">
+                        <div>작성자</div>
+                        <div><input type="text" name='writer' placeholder="이름을 입력해주세요" value="{{home.writer}}"></div>
+                    </div>
+                    <div class="festa_content festa_content_second">
+                        <div>내용</div>
+                        <div>
+                            <textarea name="body" cols="30" rows="10" placeholder="내용을 입력해주세요">{{home.body}}</textarea>
+                        </div>
+                    </div>
+                </div>
+                <div id="button_div">
+                    <div>
+                        <input type="submit" value="취소" onClick='bt_function(0)'>
+                    </div>
+                    <div>
+                        <input type="submit" value="완료" onClick='bt_function(1)'>
+                    </div>
+                </div>
+            </div>
         </form>
-    </center>
-</body>
 
-</html>
+        <script>
+            var submitForm = document.cancle_or_save_form;
+
+            function bt_function(cSave) {
+                if (cSave == 0) {
+                    submitForm.action = "/festa_now/{{festa.id}}/staff/home";
+                } else {
+                    submitForm.action = "/festa_now/{{festa.id}}/staff/create_home/";
+                }
+            }
+        </script>
+    </div>
+</div>
+
+<style>
+    /* 전체 컨테이너 */
+    #new_staff_container {
+        width: 100%;
+        height: 100%;
+        padding-top: 50px;
+        padding-left: 20%;
+        padding-right: 20%;
+        background: #f4f3ff;
+    }
+
+    /* 공지사항 타이틀 */
+    #subtitle_text_wrapper {
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    #background_div {
+        background: #ffffff;
+        margin-top: 10px;
+        padding-top: 10px;
+        padding-bottom: 30px;
+    }
+
+    .festa_content_second {
+        margin-top: 3%;
+    }
+
+    .festa_content div {
+        max-width: 100%;
+        width: 100%;
+        padding: 2px 10px;
+    }
+
+    .festa_content div input,
+    .festa_content div textarea {
+        border: 1px solid #747474;
+        /* margin: 10px;*/
+        padding: 10px;
+        width: 100%;
+        max-width: 100%;
+    }
+
+    #button_div {
+        display: flex;
+        justify-content: center;
+        margin-top: 30px;
+    }
+
+    #button_div div {
+        margin: 10px;
+    }
+
+    #button_div div input {
+        width: 100px;
+        background: #f4f3ff;
+    }
+    #selector_version{
+        display: flex;
+    }
+    #selector_div{
+        display: flex;
+        width: 10%;
+        justify-content: center;
+        padding-left: 0px;
+    }
+    #selector_div select{
+        width: 100%;
+    }
+    #title_div{
+        width: 90%;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+</style>
+{% endblock %}
