--- a/app_festa/templates/festa_home/home.html
+++ b/app_festa/templates/festa_home/home.html
@@ -146,13 +146,13 @@
     #festa_now_home{
         width: 100%;
         padding: 2% 10%;
-        height: 489px;
+        height: auto;
     }
 
 
     #festa_ready_home {
         width: 100%;
-        height: 489px;
+        height: auto;
         padding: 2% 10%;
     }
 
