--- a/app_festaNow/templates/festa_now/staff/notice/notice.html
+++ b/app_festaNow/templates/festa_now/staff/notice/notice.html
@@ -3,7 +3,7 @@
  
     <div class="row"  style="height:500px;">
         <div class="col-md-5">
-                <a href="{% url 'staff_main' festa.id %}">뒤로</a>
+                <a href="{% url 'staff_main2' festa.id %}">뒤로</a>
                 <h1>Staff 공지사항</h1>
                 
                 <a href="{% url 'new_staff' festa.id %}">글쓰기 </a>
