update schedule modify

--- a/app_festa/templates/festa_home/confirm.html
+++ b/app_festa/templates/festa_home/confirm.html
@@ -11,7 +11,7 @@
         <p>공연 제목</p>
         <input type="text" name="name" value={{festa.name}}>
         <p>공연 날짜</p>
-        <input type="date" name="schedule" value="{{festa.schedule_start}}"> ~ <input type="date" name="schedule" value="{{festa.schedule_end}}">
+        <input type="date" name="schedule_start" value="{{festa.schedule_start}}"> ~ <input type="date" name="schedu_end" value="{{festa.schedule_end}}">
         <p>공연 장소</p>
         <input type="text" name="space" value="{{festa.space}}">
 
