--- a/app_festa/templates/festa_home/new.html
+++ b/app_festa/templates/festa_home/new.html
@@ -92,7 +92,17 @@
                             </div>
                         </div>
                     </div>
-                    <div class="img_wrapper">
+                    <div class="img_wrapper_file">
+                        <div class="img_file_1">
+                            <p>이미지 첨부</p>
+                        </div>
+                        <div class="img_file_2"></div>
+                        <div class="img_file_3">
+                            <input type="file" name="poster" vlaue="파일찾기">
+                        </div>
+
+                    </div>
+                    <!-- <div class="img_wrapper">
                         <p id="main_img">이미지 첨부</p>
                         <p id="sub_img">이미지 내 공연 소개, 공연 출연진, 타임 테이블 정보 필수</p>
                     </div>
@@ -107,24 +117,15 @@
                                 <label class="custom-file-label" for="inputGroupFile01"></label>
                             </div>
                         </div>
+                    </div> -->
+                    
+                    <div class="last_submit">
+                        <input type="submit" value="등록하기">
                     </div>
-                    <!-- <div class="img_wrapper_file">
-                        <div class="img_file_1">
-                            <p>이미지 첨부</p>
-                        </div>
-                        <div class="img_file_2"></div>
-                        <div class="img_file_3">
-                            <input type="file" name="poster" vlaue="파일찾기">
-                        </div> -->
-
+                </form>
             </div>
-            <div class="last_submit">
-                <input type="submit" value="등록하기">
-            </div>
-            </form>
         </div>
     </div>
-</div>
 </div>
 </body>
 
@@ -232,6 +233,7 @@
         font-weight: 500;
         color: #9e9e9e;
     }
+
     .img_wrapper_file {
         margin-top: 5px;
     }
